@@ -85,4 +85,24 @@ No starting char list
         End
 ------------------------------------------------------------------
 
+/\x{212a}+/i8SI
+Capturing subpattern count = 0
+Options: caseless utf
+No first char
+No need char
+Subject length lower bound = 1
+Starting chars: K k \xff 
+    KKkk\x{212a}
+ 0: KKkk\x{212a}
+
+/s+/i8SI
+Capturing subpattern count = 0
+Options: caseless utf
+No first char
+No need char
+Subject length lower bound = 1
+Starting chars: S s \xff 
+    SSss\x{17f}
+ 0: SSss\x{17f}
+
 /-- End of testinput19 --/ 
